<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/large">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:maxLines="2"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        tools:text="Qué pedo mamones!" />

    <EditText
        android:id="@+id/dialog_input"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="@dimen/normal"
        android:layout_marginBottom="@dimen/normal"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:inputType="text"
        android:gravity="top|start"
        android:imeOptions="actionDone"
        android:maxLines="6"
        android:textColor="@color/text"
        android:textSize="30sp"
        android:hint="@string/set_value"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialog_ok"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>