<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:background="@drawable/background_top_cornered"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        tools:text="Alguna mamada que quieras poner como título" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:maxLines="10"
        android:textColor="#9A9A9A"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ask_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="Aquí voy a poner una descripción ridículamente larga que los pendejos usuarios van a ignorar para luego salir con sus mamadas de que los espian y se roban sus datos cuando gustosos dan su información como las wilas baratas que son, por eso me cagan, así que pueden irse a chingar a su madre putos usuarios quejicas, los que no se quejan no hay pedo, no es contra ustedes, pero como son la mayoría: PUDRANSEEEEEEEE" />

    <FrameLayout
        android:id="@+id/ask_permission"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_large_cornered"
        app:layout_constraintBottom_toTopOf="@+id/privacy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:text="@string/ask_permission"/>
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/dialog_permission_consult_our"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/privacy"
        app:layout_constraintEnd_toStartOf="@+id/center_vertical"
        app:layout_constraintTop_toTopOf="@+id/privacy" />

    <Button
        android:id="@+id/privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dialog_permission_privacy_politics"
        android:textAllCaps="false"
        android:textColor="#04358E"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/center_vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>